# Mold2_pywrapper

./: .flake8  .gitignore  .isort.cfg  CITATION.cff  README.md  setup.cfg  tox.ini
.github/workflows/: ci.yml  linting.yml  publish.yml
src/Mold2_pywrapper/: __init__.py  descriptors.json  mold2_wrapper.py
tests/: test_integration.py  test_mold2_wrapper.py  test_unit.py
