[metadata]
name = mold2_pywrapper
version = attr: mold2_pywrapper.__version__
description = Python wrapper for Mold2 descriptors
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/Mold2_pywrapper

author = Olivier J. M. Béquignon
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    mold2
    molecular descriptors
    cheminformatics
    toxicoinformatics
    QSAR

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    more-itertools
    pandas
    rdkit
    requests
    bounded-pool-executor

[options.packages.find]
where = src

[options.package_data]
prodec = *.json

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest